--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -1,3 +1,10 @@
-<h1>Welcome to the To Do List!</h1>
-<a href='/items/new'>Add a new item</a>
-<a href='/items'>See list of items</a>
+@{
+  Layout = "_Layout";
+}
+
+<div class="container">
+<h1>Toodle Dos</h1>
+<p>@Html.ActionLink("See all items", "Index", "Items")</p> 
+<p>@Html.ActionLink("See all categories", "Index", "Categories")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
+</div>
