--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -1,17 +1,37 @@
-@using ToDoList.Models;
-
-<h1>To Do List</h1>
-@if (Model.Count == 0)
-{
-  <p>There are no items in the list.</p>
+@{
+  Layout = "_Layout";
 }
+@using System.Linq;
+@using ToDoList.Models;
+@model List<ToDoList.Models.Item>;
+
+<h1>Items</h1>
+
+@if (@Model.Count == 0)
+{
+  <h3>No items have been added yet!</h3>
+}
+
 <ul>
-  @foreach (Item item in Model)
+  @foreach(Item item in Model)
   {
-    <li>@item.Description</li>
-  }
+    @if (@item.Complete == false)
+    {
+      <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId }) | @item.DueDate | "Not Completed"
+      </li>
+    }
+    else {
+      <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId }) | @item.DueDate | "Completed"
+      </li>
+    }
+}
 </ul>
-<a href='/items/new'>Add a new item</a>
-<form action="/items/delete" method="post">
-  <button type="submit" name="button">Clear All Items</button>
+
+<p>@Html.ActionLink("Add new item", "Create")</p>
+
+<form>
+    <p>
+        Title: <input type="text" asp-for="SearchString" />
+        <input type="submit" value="Filter" />
+    </p>
 </form>
