--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -2,9 +2,12 @@
   Layout = "_Layout";
 }
 
-<div class="container">
-<h1>Toodle Dos</h1>
+
+<h1>To Dos</h1>
 <p>@Html.ActionLink("See all items", "Index", "Items")</p> 
 <p>@Html.ActionLink("See all categories", "Index", "Categories")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
-</div>
+
+
+
+<p>@Html.ActionLink("Create an account", "Index", "Account")</p>
