--- a/ToDoList/Views/Items/Create.cshtml
+++ b/ToDoList/Views/Items/Create.cshtml
@@ -4,21 +4,17 @@
 
 @model ToDoList.Models.Item
 
-<div class="container">
 <h4>Add a new task</h4>
+
 @using (Html.BeginForm())
 {
-    @Html.LabelFor(model => model.Description)
-    @Html.TextBoxFor(model => model.Description)
+  @Html.LabelFor(model => model.Description)
+  @Html.TextBoxFor(model => model.Description)
 
-    @Html.LabelFor(model => model.DueDate)
-    @Html.TextBoxFor(model => model.DueDate, new{@type= "date"})
+  @Html.Label("Select category")
+  @Html.DropDownList("CategoryId")
 
-    @Html.Label("Select Category")
-    @Html.DropDownList("CategoryId")
-    
-    <input type="submit" value="Add" class="btn btn-info" />
+  <input type="submit" value="Add new item" class="btn btn-default" />
 }
 <p>@Html.ActionLink("Show all items", "Index")</p>
-</div>
 
