--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -1,37 +1,25 @@
 @{
   Layout = "_Layout";
 }
-@using System.Linq;
 @using ToDoList.Models;
-@model List<ToDoList.Models.Item>;
+@model IEnumerable<ToDoList.Models.Item>
 
-<h1>Items</h1>
+<h1>Items for @User.Identity.Name</h1>
 
-@if (@Model.Count == 0)
+@if (Model.Any())
+{
+  <ul>
+    @foreach (Item item in Model)
+    {
+      <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId })</li>
+    }
+  </ul>
+} 
+else
 {
   <h3>No items have been added yet!</h3>
 }
 
-<ul>
-  @foreach(Item item in Model)
-  {
-    @if (@item.Complete == false)
-    {
-      <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId }) | @item.DueDate | "Not Completed"
-      </li>
-    }
-    else {
-      <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId }) | @item.DueDate | "Completed"
-      </li>
-    }
-}
-</ul>
-
 <p>@Html.ActionLink("Add new item", "Create")</p>
 
-<form>
-    <p>
-        Title: <input type="text" asp-for="SearchString" />
-        <input type="submit" value="Filter" />
-    </p>
-</form>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
